--- a/index.html
+++ b/index.html
@@ -65,31 +65,31 @@
                     <img src="Images/Css.png" alt="">
                 </div>
                 <div class="bar">
-                    <img src="/Images/Bootstrap.jpg" alt="">
+                    <img src="Images/Bootstrap.jpg" alt="">
                 </div>
                 <div class="bar bar-2">
-                    <img src="/Images/js.png" alt="">
+                    <img src="Images/js.png" alt="">
                 </div>
                 <!-- <div class="bar">
                         <img src="/Images/Json.jpg" alt="">
                 </div> -->
                 <div class="bar">
-                    <img src="/Images/Jquery.jpg" alt="">
+                    <img src="Images/Jquery.jpg" alt="">
                 </div>
                 <div class="bar">
-                    <img src="/Images/React.jpg" alt="">
+                    <img src="Images/React.jpg" alt="">
                 </div>
                 <div class="bar" style="padding-top: 24px;">
-                    <img src="/Images/Node.jpg" alt="">
+                    <img src="Images/Node.jpg" alt="">
                 </div>
                 <div class="bar">
-                    <img src="/Images/Express.jpg" alt="">
+                    <img src="Images/Express.jpg" alt="">
                 </div>
                 <div class="bar">
-                    <img src="/Images/Mongodb.jpg" alt="">
+                    <img src="Images/Mongodb.jpg" alt="">
                 </div>
                 <div class="bar">
-                    <img src="/Images/Mysql.jpg" alt="">
+                    <img src="Images/Mysql.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
         <h3 class="project-head">Front-End Projects</h3>
         <div class="projects-container">
             <div class="project-box">
-                <div> <img src="/Images/Biryani.jpg" alt=""> </div>
+                <div> <img src="Images/Biryani.jpg" alt=""> </div>
                 <div class="mini-title">Biryani</div>
                 <div class="project-details">
                     <h3>Biryani</h3>
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="project-box">
-                <div> <img src="/Images/Travel.jpg" alt=""> </div>
+                <div> <img src="Images/Travel.jpg" alt=""> </div>
                 <div class="mini-title">Travel</div>
                 <div class="project-details">
                     <h3>Travel</h3>
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="project-box">
-                <div> <img src="/Images/cricketers.jpg" alt=""> </div>
+                <div> <img src="Images/cricketers.jpg" alt=""> </div>
                 <div class="mini-title">Cricketers</div>
                 <div class="project-details">
                     <h3>Cricketers</h3>
@@ -141,7 +141,7 @@
             </div>
 
             <div class="project-box">
-                <div> <img src="/Images/movies.jpg" alt=""> </div>
+                <div> <img src="Images/movies.jpg" alt=""> </div>
                 <div class="mini-title">Movies Now</div>
                 <div class="project-details">
                     <h3>Movies Now</h3>
@@ -160,7 +160,7 @@
         <h3 class="project-head">Back-End Projects</h3>
         <div class="projects-container-2">
             <div class="project-box">
-                <div> <img src="/Images/Foodstuffs.jpg" alt=""> </div>
+                <div> <img src="Images/Foodstuffs.jpg" alt=""> </div>
                 <div class="mini-title">FoodStuffs</div>
                 <div class="project-details">
                     <h3>FoodStuffs</h3>
@@ -173,7 +173,7 @@
                 </div>
             </div>
             <div class="project-box">
-                <div> <img src="/Images/mongocrud.jpg" alt=""> </div>
+                <div> <img src="Images/mongocrud.jpg" alt=""> </div>
                 <div class="mini-title">MongoDB CRUD</div>
                 <div class="project-details">
                     <h3>CRUD</h3>
@@ -186,7 +186,7 @@
                 </div>
             </div>
             <div class="project-box">
-                <div> <img src="/Images/mysqlcrud.jpg" alt=""> </div>
+                <div> <img src="Images/mysqlcrud.jpg" alt=""> </div>
                 <div class="mini-title">MySQL CRUD</div>
                 <div class="project-details">
                     <h3>CRUD</h3>
@@ -204,7 +204,7 @@
         <h3 class="project-head">Mini Projects</h3>
         <div class="projects-container-3">
             <div class="project-box">
-                <div> <img src="/Images/calc.jpg" alt=""> </div>
+                <div> <img src="Images/calc.jpg" alt=""> </div>
                 <div class="mini-title">Calculator</div>
                 <div class="project-details">
                     <h3>Calculator</h3>
@@ -217,7 +217,7 @@
                 </div>
             </div>
             <div class="project-box">
-                <div> <img src="/Images/Qrcode.jpg" alt=""> </div>
+                <div> <img src="Images/Qrcode.jpg" alt=""> </div>
                 <div class="mini-title">QRCode</div>
                 <div class="project-details">
                     <h3>QR CODE</h3>
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <div class="project-box">
-                <div> <img src="/Images/login.jpg" alt=""> </div>
+                <div> <img src="Images/login.jpg" alt=""> </div>
                 <div class="mini-title">Login Form</div>
                 <div class="project-details">
                     <h3>Login Form</h3>
