--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="home" id="home">
         <div class="home-img">
-            <img src="./Images/Person.jpg" alt="">
+            <img src="Images/Person.jpg" alt="">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>Kishoth</span></h1>
@@ -42,10 +42,10 @@
                 and user-friendly web applications.I enjoy building efficient and scalable solutions that enhance user experiences
                 and meet client needs</p>
             <div class="social-icon">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://linkedin.com/in/https://www.linkedin.com/in/kishoth-kumar-7285b62b8/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/Kishoth-45"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.youtube.com/@khiladiking45"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://instagram.com/khiladiking45"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a href="#" class="btn">Hire Me</a>
         </div>
@@ -71,7 +71,7 @@
                     <img src="Images/js.png" alt="">
                 </div>
                 <!-- <div class="bar">
-                        <img src="/Images/Json.jpg" alt="">
+                        <img src="Images/Json.jpg" alt="">
                 </div> -->
                 <div class="bar">
                     <img src="Images/Jquery.jpg" alt="">
@@ -107,8 +107,8 @@
                     <p class="description">Biryani Sale Site</p>
                     <p>HTML, CSS, BOOTSTRAP</p>
                     <div class="project-btns">
-                        <div><a href="#">Source</a></div>
-                        <div><a href="#">Live Site</a></div>
+                        <div><a href="https://github.com/Kishoth-45/BiryaniParadise">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/BiryaniParadise/">Live Site</a></div>
                     </div>
 
                 </div>
@@ -121,8 +121,8 @@
                     <p class="description">Tour WebSite</p>
                     <p>HTML, CSS, Bootstrap, JavaScript, React</p>
                     <div class="project-btns">
-                        <div><a href="#">Source</a></div>
-                        <div><a href="#">Live Site</a></div>
+                        <div><a href="https://github.com/Kishoth-45/Travel">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/Travel/">Live Site</a></div>
                     </div>
                 </div>
             </div>
@@ -134,8 +134,8 @@
                     <p class="description">Cricket Players UserCard Model</p>
                     <p>HTML, CSS, Bootstrap, JavaScript, React</p>
                     <div class="project-btns">
-                        <div><a href="#">Source</a></div>
-                        <div><a href="#">Live Site</a></div>
+                        <div><a href="https://github.com/Kishoth-45/Cricketers">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/Cricketers/">Live Site</a></div>
                     </div>
                 </div>
             </div>
@@ -148,8 +148,8 @@
                     <p class="description">Movie Watching Site</p>
                     <p>HTML, CSS</p>
                     <div class="project-btns">
-                        <div><a href="#">Source</a></div>
-                        <div><a href="#">Live Site</a></div>
+                        <div><a href="https://github.com/Kishoth-45/Moviesite">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/Moviesite/">Live Site</a></div>
                     </div>
                 </div>
             </div>
@@ -167,8 +167,8 @@
                     <p class="description">A complete E-Commarce Site</p>
                     <p>HTML, CSS, Bootstrap, JavaScript, React, Nodejs, Express, MongoDB</p>
                     <div class="project-btns">
-                        <div><a href="#">Source</a></div>
-                        <div><a href="#">Live Site</a></div>
+                        <div><a href="https://github.com/Kishoth-45/Foodstuffs">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/Foodstuffs/">Live Site</a></div>
                     </div>
                 </div>
             </div>
@@ -180,8 +180,8 @@
                     <p class="description">Crud Operation in React-Express-MongoDB</p>
                     <p>HTML, CSS, Bootstrap, React, Nodejs, Express, MongoDB</p>
                     <div class="project-btns">
-                        <div><a href="#">Source</a></div>
-                        <div><a href="#">Live Site</a></div>
+                        <div><a href="https://github.com/Kishoth-45/BiryaniParadise">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/BiryaniParadise/">Live Site</a></div>
                     </div>
                 </div>
             </div>
@@ -193,8 +193,8 @@
                     <p class="description">Crud Operation in React-Express-MySQL</p>
                     <p>HTML, CSS, Bootstrap, React, Nodejs, Express, MySQL</p>
                     <div class="project-btns">
-                        <div><a href="#">Source</a></div>
-                        <div><a href="#">Live Site</a></div>
+                        <div><a href="https://github.com/Kishoth-45/BiryaniParadise">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/BiryaniParadise/">Live Site</a></div>
                     </div>
                 </div>
             </div>
@@ -211,8 +211,8 @@
                     <p class="description">A Sci-fic Calculator</p>
                     <p>HTML, CSS, Bootstrap, JavaScript</p>
                     <div class="project-btns">
-                        <div><a href="#">Source</a></div>
-                        <div><a href="#">Live Site</a></div>
+                        <div><a href="https://github.com/Kishoth-45/Calculator">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/Calculator/">Live Site</a></div>
                     </div>
                 </div>
             </div>
@@ -224,8 +224,8 @@
                     <p class="description">A QRCode Generator</p>
                     <p>HTML, CSS , React</p>
                     <div class="project-btns">
-                        <div><a href="#">Source</a></div>
-                        <div><a href="#">Live Site</a></div>
+                        <div><a href="https://github.com/Kishoth-45/QRCode">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/QRCode/">Live Site</a></div>
                     </div>
                 </div>
             </div>
@@ -237,8 +237,8 @@
                     <p class="description">A Form with Validations</p>
                     <p>HTML, CSS , JavaScript</p>
                     <div class="project-btns">
-                        <div><a href="#">Source</a></div>
-                        <div><a href="#">Live Site</a></div>
+                        <div><a href="https://github.com/Kishoth-45/Login_form">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/Login_form/">Live Site</a></div>
                     </div>
                 </div>
             </div>
@@ -320,18 +320,21 @@
                 <div>Name : KISHOTH KUMAR V</div>
                 <div>Email : kishothkumar4545@gmail.com</div>
                 <div>Ph Number : +918220568827</div>
-                <div class="mycv">MyCV</div>
-                <div class="cv-btn">Download CV </div>
+                <div class="cv-btn">
+                    <a href="Images/MyResume.pdf" download="Kishoth_Resume.pdf">Download My CV</a>
+                </div>
             </div>
         </div>
     </section>
+    
 
     <footer class="footer">
         <div class="social">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://linkedin.com/in/https://www.linkedin.com/in/kishoth-kumar-7285b62b8/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Kishoth-45"><i class="fa-brands fa-github"></i></a>
+            <a href="https://instagram.com/khiladiking45"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://fb.com/khiladi.kishoth.3"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.youtube.com/@khiladiking45"><i class="fa-brands fa-youtube"></i></a>
         </div>
         <p class="copyright">
             &copy; 2024 Kishoth-45. All Rights Reserved.
