--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                     <p class="description">Crud Operation in React-Express-MongoDB</p>
                     <p>HTML, CSS, Bootstrap, React, Nodejs, Express, MongoDB</p>
                     <div class="project-btns">
-                        <div><a href="https://github.com/Kishoth-45/BiryaniParadise">Source</a></div>
-                        <div><a href="https://kishoth-45.github.io/BiryaniParadise/">Live Site</a></div>
+                        <div><a href="https://github.com/Kishoth-45/MongoCrud/">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/MongoCrud/">Live Site</a></div>
                     </div>
                 </div>
             </div>
@@ -191,8 +191,8 @@
                     <p class="description">Crud Operation in React-Express-MySQL</p>
                     <p>HTML, CSS, Bootstrap, React, Nodejs, Express, MySQL</p>
                     <div class="project-btns">
-                        <div><a href="https://github.com/Kishoth-45/BiryaniParadise">Source</a></div>
-                        <div><a href="https://kishoth-45.github.io/BiryaniParadise/">Live Site</a></div>
+                       <div><a href="https://github.com/Kishoth-45/MongoCrud/">Source</a></div>
+                        <div><a href="https://kishoth-45.github.io/MongoCrud/">Live Site</a></div>
                     </div>
                 </div>
             </div>
